[gd_scene load_steps=3 format=3 uid="uid://bv6u1rmhe8lay"]

[ext_resource type="Script" path="res://inventory/inv_ui_slot.gd" id="1_c40rm"]
[ext_resource type="FontFile" uid="uid://cpojoq47dln4s" path="res://Fonts/PixelOperator.ttf" id="2_i81ff"]

[node name="Inv_UI_Slot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_c40rm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="DragSprite" type="Sprite2D" parent="CanvasLayer"]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 52.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_i81ff")
text = "test"

[node name="SlotBG" type="Sprite2D" parent="."]
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="Panel" type="Panel" parent="CenterContainer"]
z_index = 102
layout_mode = 2

[node name="ItemDisplay" type="Sprite2D" parent="CenterContainer/Panel"]
z_index = 101

[node name="Button" type="Button" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
